# XYZ-Translate

./: CMakeLists v 1.3.2.txt  CMakeLists.txt  README.MD  resources.rc
src/: main v1.3.2.cpp  main.cpp
